feat:新增定时任务，更新问卷当前状态。fit:修复状态传输时发生错误的问题